@startuml
class Main {
main()

}
class MainController {
}
class GetArrFromFile {
createNumberArr(int size):int[] arr
}
class GetArrFromUser {
createNumberArr(int size):int[] arr
}
class GetArrFromRandom {
createNumberArr(int size):int[] arr
}
interface GetArrFromRandom {
createNumberArr(int size):int[] arr
}
class Talanalyse {
sum : double
counter : int
computeAvg(int[] numbers) : double
computeNumbersAboveAvg(int[] numbers):int
}
MainController -- Talanalyse
MainController -- GetArrFromRandom
Main-- MainController
GetArrFromRandom <|-- GetArrFromFile
GetArrFromRandom <|-- GetArrFromUser
GetArrFromRandom <|-- GetArrFromRandom

@enduml